--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=pages/login.html">
+    <meta http-equiv="refresh" content="0;url=login.html">
     <title>Zzeus</title>
 </head>
 <body>
